2007-05-29  Bertrand Lorentz <bertrand.lorentz@gmail.com> 

	* alarm.mdp, alarm.mds: Update MonoDevelop files.

2007-05-29  Bertrand Lorentz <bertrand.lorentz@free.fr> 

	* src/ConfigurationWidget.cs, src/AlarmPlugin.cs,
	  src/SleepTimerConfigDialog.cs, src/AlarmConfigDialog.cs,
	  autogen.sh, po/LINGUAS, po/fr.po, po/POTFILES.in: Fix the i18n
	  support. Thanks to Alexandre Prokoudine for the suggestions.
	* build/m4, build/m4/shamrock, build/m4/shamrock/mono.m4,
	  build/m4/shamrock/programs.m4, build/m4/shamrock/i18n.m4: Add and
	  use abock's macros from banshee. configure.ac looks a little bit
	  better now.
	* configure.ac: Fix the i18n support. Thanks to Alexandre Prokoudine
	  for the suggestions.
	
	  Add and use abock's macros from banshee. configure.ac looks a
	  little bit better now.

2007-01-05  Bertrand Lorentz  <bertrand.lorentz@free.fr>
    * src/GConfSchemas.cs:
    * src/AlarmPlugin.cs: Updated to take advantage of the new configuration system.
    
    * build/*: Build rules for generating gconf schemas from assemblies

    * src/Makefile.am: Generate gconf schemas
    
    * configure.ac:
    * Makefile.am:
    * autogen.sh:
    * po/*: Getting ready to be I18N'ed

2006-11-01  Bertrand Lorentz  <bertrand.lorentz@free.fr>
    * Renamed Plugin.cs to AlarmPlugin.cs to be consistent with the class name and other plugins
    * src/AlarmPlugin.cs: Added PluginModuleEntry. See http://abock.org/2006/10/30/cracking-down-on-heap-abuse-part-1/ for an explanation.

2006-09-17  Patrick van Staveren  <trick@vanstaveren.us>

        * BUGS, TODO, README, alarm.mds: updated
        * configure.ac: added AssemblyInfo, made VERSION variable
        * src/ConfigurationWidget.cs: revised layout of config page a
        lot.  Removed Sleep Timer config section as it is empty.
        * src/AssemblyInfo.cs.in: added assembly information attributes
        * src/Makefile.am: added AssemblyInfo, removed passthru
        MCS_FLAGS variable